# Nmap Changelog ($Id$); -*-text-*-

[NOT YET RELEASED]

o [NSE] Added checks for missing OpenSSL to MySQL scripts and library [Patrik]

o Made --resume work with recent changes to normal output. [jlanthea]

o [NSE] Added the new snmp-interfaces script by Thomas Buchanan, which
  enumerates network interfaces over SNMP.

o [NSE] Added a new library for PostgreSQL and the script pgsql-brute that uses
  it to guess credentials. [Patrik]

o [NSE] Added the script ldap-search which queries a LDAP directory for either
  all, or a number of pre-defined object types. [Patrik]

o The redistributable Visual C++ runtime components installer
  (vcredist_x86.exe) has been upgraded to version 9.0.30729.4148. Axel
  Pettinger reported that the previous version 9.0.30729.17, caused a
  Windows Update on Windows 7 because of Microsoft security advisory
  MS09-035.

o [Ncat] Fixed an error that could make programs run with --exec exit
  prematurely on Windows. The problem was related to a program writing
  too quickly into a non-blocking socket. A symptom was the message:
    NCAT DEBUG: Subprocess ended with exit code 259.
  This was reported by David Millis. [David]

o [Ncat] Fixed a bug that prevented detecting EOF from stdin on
  Windows. This was reported by Adrian Crenshaw and Andy Zwirko.
  [David]

o [Nsock] WSAEACCES was added to the list of known connect error
  codes. This error can happen on Windows when a port is blocked by
  Windows Firewall. Thanks to taemun for reporting this and
  investigating.

o [NSE] Added the scripts couchdb-databases and couchdb-stats by
  Martin Holst Swende, which list CouchDB databases and show access
  statistics. These scripts use the new json.lua library, also by
  Martin.

o Fixed the parsing of libdnet DLPI interface names that contain more
  than one string of digits. Joe Dietz reported that an interface with
  the name e1000g0 was causing the error message
    Warning: Unable to open interface e1000g0 -- skipping it.